--- a/src/estilos.css
+++ b/src/estilos.css
@@ -23,7 +23,7 @@
 }
 
 .avatar {
-    max-width: 100px;
+    max-width: 7rem;
     border-radius: 50%;
     margin: 2rem 0 1.5rem;
     border: 2px solid hsl(0, 0%, 20%);
@@ -52,23 +52,18 @@
     list-style-type: none;
 }
 
-.links .link {
+.link {
     width: 22rem;
     margin-bottom: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.link {
-    display: block;
     background-color: hsl(0, 0%, 20%);
     color: hsl(0, 0%, 100%);
     padding: 1rem;
     font-weight: 600;
     border-radius: .5rem;
     text-decoration: none;
-
 }
 
 .link:hover {
